[package]
name = "elfy"
version = "0.1.6"
authors = ["JerTH <jeremyhatcher27@gmail.com>"]
edition = "2018"
license = "MIT"
description = """
A Rust crate for reading ELF files
"""
readme = "README.md"

keywords = ["ELF", "unix", "arm"]

homepage = "https://github.com/JerTH/elfy"
documentation = "https://docs.rs/elfy"
repository = "https://github.com/JerTH/elfy"
